--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,15 @@
 server:
   port: 8080
-  payload_max_size: 5120
+  payload_max_size: 51200
 service:
   max_len_chunk: 2
   max_size_chunk: 1024
   max_collect_chunk_duration: 3s
   hosts_by_topics:
     topic1:
-      - "host1"
+      - ""
       - "host2"
     topic2:
       - "host3"
+  kafka_brokers:
+    - "localhost:9092"
