one host to one topic mapping

--- a/config.yaml
+++ b/config.yaml
@@ -5,11 +5,8 @@ service:
   max_len_chunk: 100
   max_size_chunk: 1048576
   max_collect_chunk_duration: 3s
-  hosts_by_topics:
-    topic1:
-      - ""
-      - "host2"
-    topic2:
-      - "host3"
+  hosts_to_topics:
+    host1: 'topic1'
+    host2: 'topic2'
   kafka_brokers:
     - "localhost:9092"
