--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1.0.81" }
 thiserror = "1.0.30"
 deepsize = "0.2.0"
+futures = { version="0.3.21"  }
 
 # log
 slog = { version = "2.7.0", features = ["nested-values"] }
@@ -18,6 +19,8 @@ slog-extlog-derive = "8.0.0"
 erased-serde = "0.3.20"
 
 duration-string = { version = "0.0.6", features = ["serde"] }
+
+kafka = "0.9"
 
 # Async
 tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync"] }
