--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ futures = { version = "0.3.21" }
 
 tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync"] }
 
+anyhow = { version = "1.0.57" }
+
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1.0.81" }
 
