--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,14 +16,16 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: What
-      run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+    - name: Inject slug/short variables
+      uses: rlespinasse/github-slug-action@v4
+    - name: Derive tag from branch slug
+      run: echo "BRANCH=${GITHUB_REF_NAME_SLUG}" >> $GITHUB_ENV
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ secrets.DOCKER_USER }}/firewall-collector:latest , ${{ secrets.DOCKER_USER }}/firewall-collector:${{ env.BRANCH }}
+        tags: ${{ secrets.DOCKER_USER }}/firewall-collector:latest, ${{ secrets.DOCKER_USER }}/firewall-collector:${{ env.BRANCH }}
