--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ serde_json = { version = "1.0.81" }
 tracing = { version = "0.1.34", features = ["log"] }
 tracing-actix-web = "0.5"
 tracing-log = "0.1.3"
-tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json", "valuable"] }
+valuable = { version = "0.1.0", features = ["derive"] }
 
 actix-web = "4"
 actix-web-prom = "0.6.0"
