--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,12 @@ tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
 
 actix-web = "4"
-actix-web-prom = "0.6.0"
 actix-server = "2.1.1"
+
+prometheus = "0.13.1"
+mime = "0.3.16"
+
+lazy_static = "1.4.0"
 
 kafka = "0.9"
 
